--- a/authors.Rmd
+++ b/authors.Rmd
@@ -35,7 +35,7 @@ title: "The Authors"
   <div class="col-sm-8">
 
 
-[**Nicholas J. Horton**](https://www.amherst.edu/people/facstaff/nhorton) is Beitzel Professor of Technology and Society (Statistics and Data Science) at Amherst College. He is a Fellow of the ASA and the AAAS, co-chair of the National Academies Committee on Applied and Theoretical Statistics, recipient of a number of national teaching awards, author of a series of books on statistical computing, and actively involved in data science curriculum efforts to help students "think with data".
+[**Nicholas J. Horton**](https://www.amherst.edu/people/facstaff/nhorton) is Beitzel Professor of Technology and Society (Statistics and Data Science) at Amherst College. He is a Fellow of the ASA, the IMS, and the AAAS, served as co-chair of the National Academies Committee on Applied and Theoretical Statistics, chaired a National Academies Consensus Study Committee on K-12 data and computing, and has been the recipient of a number of national teaching awards, author of a series of books on statistical computing, and involved in data science curriculum efforts to help students "think with data".
 
 <a href="https://twitter.com/askdrstats" class="twitter-follow-button" data-show-count="false">Follow @askdrstats</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
   </div>
